--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,9 +23,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: ESLint
-      run: eslint . --fix
+      run: |
+          npm i -g eslint
+          eslint . --fix
     - name: Build Files
       run: |
-         npm ci
-         npm run build --if-present
-         npm test
+          npm ci
+          npm run build --if-present
+          npm test
